# secretbooklm

./: .clinerules  .gitignore  README.md  changelog.config.js
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  gitconfig  postCreate.sh  postStart.sh
.github/instructions/: 00-general.md
backend/: .env.sample  .gitignore  README.md  main.py  pyproject.toml
backend/src/langchain_motex/: __init__.py
backend/src/langchain_motex/base/: __init__.py  app_logger.py  settings.py
backend/src/langchain_motex/chain/: __init__.py  base.py  pdf_multi.py  pdf_single.py
backend/src/langchain_motex/util/: __init__.py  pdf_util.py
frontend/: .env.sample  .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  panda.config.ts  vite.config.ts
frontend/amplify/: backend.ts  tsconfig.json
frontend/amplify/auth/: resource.ts
frontend/app/: layout.tsx  loading.tsx  page.tsx
frontend/assets/: style.css
frontend/components/: chat-panel.tsx  loading-splash.tsx  notebook.tsx  source-panel.tsx  studio-panel.tsx
frontend/src/: About.tsx  App.tsx  Home.tsx  ProjectDetail.tsx  ProjectDetail_fixed.tsx  ProjectList.tsx  main.tsx
frontend/src/api/: ProjectDetail.ts  ProjectList.ts
frontend/src/components/: CognitoAuthenticator.tsx  MagnitoAuthenticator.tsx
frontend/src/types/: ProjectDetail.ts  ProjectList.ts
frontend/src/util/: RandomEmoji.ts
frontend_old/: next.config.ts  tsconfig.json
frontend_old/components/: chat-panel.tsx  notebook.tsx  studio-panel.tsx
